--- a/package.json
+++ b/package.json
@@ -10,9 +10,16 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.8.5",
     "axios": "^0.27.2",
+    "formik": "^2.2.9",
     "react": "18.0.0",
-    "react-native": "0.69.4"
+    "react-native": "0.69.4",
+    "react-redux": "^8.0.2",
+    "redux": "^4.2.0",
+    "redux-logger": "^3.0.6",
+    "redux-saga": "^1.2.1",
+    "reselect": "^4.1.6"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
@@ -22,6 +29,7 @@
     "@types/jest": "^26.0.23",
     "@types/react-native": "^0.69.3",
     "@types/react-test-renderer": "^18.0.0",
+    "@types/redux-logger": "^3.0.9",
     "@typescript-eslint/eslint-plugin": "^5.29.0",
     "@typescript-eslint/parser": "^5.29.0",
     "babel-jest": "^26.6.3",
