--- a/package.json
+++ b/package.json
@@ -10,11 +10,17 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.0.12",
+    "@react-navigation/stack": "^6.2.3",
     "@reduxjs/toolkit": "^1.8.5",
     "axios": "^0.27.2",
     "formik": "^2.2.9",
     "react": "18.0.0",
     "react-native": "0.69.4",
+    "react-native-elements": "^3.4.2",
+    "react-native-gesture-handler": "^2.5.0",
+    "react-native-safe-area-context": "^4.3.3",
+    "react-native-vector-icons": "^9.2.0",
     "react-redux": "^8.0.2",
     "redux": "^4.2.0",
     "redux-logger": "^3.0.6",
