--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "redux": "^4.2.0",
     "redux-logger": "^3.0.6",
     "redux-saga": "^1.2.1",
-    "reselect": "^4.1.6"
+    "reselect": "^4.1.6",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
